--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
 	},
 	"license": "MIT",
 	"scripts": {
-		"serve": "vue-cli-service serve",
-		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint",
-		"test:unit": "vue-cli-service test:unit"
+		"serve": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
+		"build": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build",
+		"lint": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service lint",
+		"test:unit": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service test:unit"
 	},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "~4.5.0",
@@ -25,8 +25,10 @@
 		"sass-loader": "^8.0.2"
 	},
 	"dependencies": {
+		"axios": "^0.27.2",
 		"chart.js": "3.3.2",
 		"core-js": "^3.6.5",
+		"pinia": "^2.0.22",
 		"primeflex": "^3.1.2",
 		"primeicons": "^5.0.0",
 		"primevue": "^3.12.2",
